# agent_viz

./: .gitignore  COLUMN_HALLUCINATION_ISSUE.md  FALLBACK_MODE_EXPLAINED.md  IMPLEMENTATION_SUMMARY.md  MODEL_SETUP.md  PROMPT_STRATEGY.md  README.md  TOOL_CALLING.md  VLLM_IMPLEMENTATION.md  VLLM_WSL2_STRATEGY.md  config.yaml  pyproject.toml  setup_vllm_wsl.sh  start_vllm_server.sh  temp_log.txt  test_general_eda_params.py  test_implementation.py  test_new_prompt.py  test_output.txt  test_param_mapping.py  test_prompt_strategy.py  test_vllm_backend.py
.cache/tool_index/: index_017d3278a81e3964.faiss  index_50376015c87e3ed8.faiss  index_adeb73084f1009e8.faiss  index_b3adf414d5e5cd79.faiss  meta_017d3278a81e3964.json  meta_498d96a8b9c6cd61.json  meta_50376015c87e3ed8.json  meta_adeb73084f1009e8.json
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LLM_IMPROVEMENTS.md  PLANNING_PIPELINE.md  PROMPT_STRATEGY.md  TOOL_REGISTRATION_STATUS.md  VLLM_IMPLEMENTATION.md  VLLM_STATUS.md
examples/december_revenue/: README.md  december_revenue.csv
scripts/: demo_fallback_mode.py  verify_determinism.py
specs/: auto-tool-registration.md
specs/001-autoviz-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-tooling-refactor/: patch-plan-v2.md  plan.md
src/autoviz_agent/: __init__.py
templates/: anomaly_detection.json  comparative_analysis.json  general_eda.json  simple_eda.json  time_series.json
tests/: test_tool_registration.py
(+69 files in other folders)
